# bryanpoulin.dev

./: .gitignore  404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
blog/: index.html
blog/archive/2023/: index.html
blog/archive/December 2023/: index.html
blog/archive/September 2024/: index.html
blog/category/documentation/: index.html
blog/category/guides/: index.html
blog/hello-world/: index.html
docs/: index.md
docs/blog/posts/: post1.md
overrides/partials/: comments.html
search/: search_index.json
